Resolving minor incompatibilities with Java 10